--- a/package.json
+++ b/package.json
@@ -4,5 +4,12 @@
   "main": "index.js",
   "repository": "git@github.com:MssKnd/scalable-my-template.git",
   "author": "Masashi Kondo <mss.knd@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "preinstall": "npx only-allow yarn"
+  },
+  "engines": {
+    "node": "^16.14.0",
+    "yarn": "1.x"
+  }
 }
